# gateway-fm-faucet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
faucet/: __init__.py  chain.py  forms.py  models.py  tests.py  urls.py  views.py
faucet/migrations/: 0001_initial.py
gateway_faucet/: asgi.py  settings.py  urls.py  wsgi.py
