[tool.poetry]
name = "gateway-faucet"
version = "0.1.0"
description = ""
authors = ["Brdji <dbrdareski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
web3 = "^7.6.0"
mock = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
